[package]
name = "config-agent"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }

[dependencies]
axum = { workspace = true }
hyper = { workspace = true  }
openapi-client = { workspace = true }
openapi-server = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
tower-http = { workspace = true, features = ["trace"] }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }