[package]
name = "config-agent"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }

[dependencies]
atomicwrites = { workspace = true }
axum = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
hyper = { workspace = true  }
moka = { workspace = true, features = ["future"] }
openapi-client = { workspace = true }
openapi-server = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "fs"] }
tower-http = { workspace = true, features = ["trace"] }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
uuid = { workspace = true }

[dev-dependencies]
serial_test = { workspace = true }