[package]
name = "config-agent-installer"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
build = "build.rs"

[dependencies]
config-agent = { workspace = true }
dialoguer = { workspace = true }
indicatif = { workspace = true }
openapi-client = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }